--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "firebase": "^8.7.1",
+    "nodemon": "^2.0.15",
     "quill": "^1.3.7",
     "quill-image-resize-module": "^3.0.0",
     "vue": "^2.6.14",
