--- a/API/package.json
+++ b/API/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "firebase": "^9.6.7",
     "firebase-admin": "^10.0.2",
     "helmet": "^5.0.2",
