--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue2-dropzone": "^3.6.0",
     "vue2-editor": "^2.10.2",
     "vuetify": "^2.6.3",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
